two column layout in desktop for drop down menu

--- a/close.html
+++ b/close.html
@@ -232,88 +232,90 @@
                     <input type="hidden" name="feedbackID" class="feedbackID" id = 'feedbackID' value=" ">
                     <div class = "collapse" id = 'reassign-form'>
                         <h4 class = 'bmh-orange-bg rounded-heading'>Re-assign Feedback</h4>
-                        <div class="form-group">
-                            <label for="Reassign_cat" class = 'bmh-orange-txt font-weight-bold'>Re-assign Category</label>
-                            <select class="form-control Reassign_cat" id="Reassign_cat" name="Reassign_cat">
-                                    <option class = 'Select'>Select Category</option>
-                                    <option class = 'Admission'>Admission</option>
-                                    <option class = 'Attendant'>Attendant services</option>
-                                    <option class = 'Building'>Building and facilities</option>
-                                    <option class = 'Cafeteria'>Cafeteria</option>
-                                    <option class = 'Canteen'>Canteen</option>
-                                    <option class = 'Care_coordination'>Care coordination</option>
-                                    <option class = 'Dietary'>Dietary</option>
-                                    <option class = 'Discharge'>Discharge</option>
-                                    <option class = 'Doctors'>Doctors</option>
-                                    <option class = 'ED'>ED</option>
-                                    <option class = 'Housekeeping'>Housekeeping</option>
-                                    <option class = 'Insurance'>Insurance desk</option>
-                                    <option class = 'Lab'>Lab</option>
-                                    <option class = 'Nursing'>Nursing</option>
-                                    <option class = 'Paramedical'>Paramedical services</option>
-                                    <option class = 'Pharmacy'>Pharmacy</option>
-                                    <option class = 'Radiology'>Radiology</option>
-                                    <option class = 'Security'>Security</option>
-                                    <option class = 'Others'>Others</option>
-                            </select>
-                        </div>  
-                        <div class="form-group">
-                            <label for="Reassign_subcat" class = 'bmh-orange-txt font-weight-bold'>Re-assign Sub-category</label>
-                            <select class="form-control Reassign_subcat" id="Reassign_subcat" name="Reassign_subcat">
-                                    <option class = 'Select-sub'>Select Sub-category</option>
-                                    <option class = 'Admission'>Delay in room allotment</option>
-                                    <option class = 'Admission'>Staff behaviour</option>
-                                    <option class = 'Attendant'>Staff behaviour</option>
-                                    <option class = 'Attendant'>Timely services</option>
-                                    <option class = 'Building'>Furniture and fixtures</option>
-                                    <option class = 'Building'>Lift services</option>
-                                    <option class = 'Building'>Parking</option>                            
-                                    <option class = 'Building'>Signage</option>
-                                    <option class = 'Building'>Ventilation and lighting</option>
-                                    <option class = 'Cafeteria'>Ambience</option>
-                                    <option class = 'Cafeteria'>Quality and cost</option>
-                                    <option class = 'Cafeteria'>Staff behaviour</option>  
-                                    <option class = 'Canteen'>Ambience</option>
-                                    <option class = 'Canteen'>Quality and cost</option>
-                                    <option class = 'Canteen'>Staff behaviour</option>
-                                    <option class = 'Canteen'>Waiting time</option>
-                                    <option class = 'Care_coordination'>IP CRE</option>
-                                    <option class = 'Care_coordination'>Supervisors</option>
-                                    <option class = 'Care_coordination'>Ward secretary</option>
-                                    <option class = 'Dietary'>Quality and cost</option>
-                                    <option class = 'Dietary'>Staff behaviour</option>
-                                    <option class = 'Dietary'>Waiting time</option>
-                                    <option class = 'Discharge'>Bill</option>
-                                    <option class = 'Discharge'>Delay in discharge</option>
-                                    <option class = 'Discharge'>Staff behaviour</option>
-                                    <option class = 'Doctors'>Care and concern</option>
-                                    <option class = 'Doctors'>Communication</option>
-                                    <option class = 'ED'>Care and concern</option>
-                                    <option class = 'ED'>Communication</option>
-                                    <option class = 'ED'>Delay in services</option>
-                                    <option class = 'Housekeeping'>Room cleanliness</option>
-                                    <option class = 'Housekeeping'>Staff behaviour</option>
-                                    <option class = 'Housekeeping'>Timely services</option>
-                                    <option class = 'Housekeeping'>Toilet cleanliness</option>
-                                    <option class = 'Insurance'>Delay in services</option>
-                                    <option class = 'Insurance'>Staff behaviour</option>
-                                    <option class = 'Lab'>Delay in reporting</option>
-                                    <option class = 'Nursing'>Appearance and grooming</option>
-                                    <option class = 'Nursing'>Care and concern</option>
-                                    <option class = 'Nursing'>Timely services</option>
-                                    <option class = 'Paramedical'>Nutrition and dietetics</option>
-                                    <option class = 'Paramedical'>Physiotherapy</option>
-                                    <option class = 'Paramedical'>Speech therapy and audiology</option>
-                                    <option class = 'Pharmacy'>Delay in services</option>
-                                    <option class = 'Pharmacy'>Medicine availability</option>
-                                    <option class = 'Pharmacy'>Staff behaviour</option>
-                                    <option class = 'Radiology'>Delay in reporting</option>
-                                    <option class = 'Radiology'>Investigation delay</option>
-                                    <option class = 'Radiology'>Staff behaviour</option>
-                                    <option class = 'Security'>Staff behaviour</option>
-                                    <option class = 'Others'>General</option>
-                                    <option class = 'Others'>Hospital Management</option>
-                            </select>
+                        <div class = 'row'>
+                            <div class="form-group col-12 col-md-6">
+                                <label for="Reassign_cat" class = 'bmh-orange-txt font-weight-bold  '>Re-assign Category</label>
+                                <select class="form-control Reassign_cat" id="Reassign_cat" name="Reassign_cat">
+                                        <option class = 'Select'>Select Category</option>
+                                        <option class = 'Admission'>Admission</option>
+                                        <option class = 'Attendant'>Attendant services</option>
+                                        <option class = 'Building'>Building and facilities</option>
+                                        <option class = 'Cafeteria'>Cafeteria</option>
+                                        <option class = 'Canteen'>Canteen</option>
+                                        <option class = 'Care_coordination'>Care coordination</option>
+                                        <option class = 'Dietary'>Dietary</option>
+                                        <option class = 'Discharge'>Discharge</option>
+                                        <option class = 'Doctors'>Doctors</option>
+                                        <option class = 'ED'>ED</option>
+                                        <option class = 'Housekeeping'>Housekeeping</option>
+                                        <option class = 'Insurance'>Insurance desk</option>
+                                        <option class = 'Lab'>Lab</option>
+                                        <option class = 'Nursing'>Nursing</option>
+                                        <option class = 'Paramedical'>Paramedical services</option>
+                                        <option class = 'Pharmacy'>Pharmacy</option>
+                                        <option class = 'Radiology'>Radiology</option>
+                                        <option class = 'Security'>Security</option>
+                                        <option class = 'Others'>Others</option>
+                                </select>
+                            </div>  
+                            <div class="form-group col-12 col-md-6">
+                                <label for="Reassign_subcat" class = 'bmh-orange-txt font-weight-bold'>Re-assign Sub-category</label>
+                                <select class="form-control Reassign_subcat" id="Reassign_subcat" name="Reassign_subcat">
+                                        <option class = 'Select-sub'>Select Sub-category</option>
+                                        <option class = 'Admission'>Delay in room allotment</option>
+                                        <option class = 'Admission'>Staff behaviour</option>
+                                        <option class = 'Attendant'>Staff behaviour</option>
+                                        <option class = 'Attendant'>Timely services</option>
+                                        <option class = 'Building'>Furniture and fixtures</option>
+                                        <option class = 'Building'>Lift services</option>
+                                        <option class = 'Building'>Parking</option>                            
+                                        <option class = 'Building'>Signage</option>
+                                        <option class = 'Building'>Ventilation and lighting</option>
+                                        <option class = 'Cafeteria'>Ambience</option>
+                                        <option class = 'Cafeteria'>Quality and cost</option>
+                                        <option class = 'Cafeteria'>Staff behaviour</option>  
+                                        <option class = 'Canteen'>Ambience</option>
+                                        <option class = 'Canteen'>Quality and cost</option>
+                                        <option class = 'Canteen'>Staff behaviour</option>
+                                        <option class = 'Canteen'>Waiting time</option>
+                                        <option class = 'Care_coordination'>IP CRE</option>
+                                        <option class = 'Care_coordination'>Supervisors</option>
+                                        <option class = 'Care_coordination'>Ward secretary</option>
+                                        <option class = 'Dietary'>Quality and cost</option>
+                                        <option class = 'Dietary'>Staff behaviour</option>
+                                        <option class = 'Dietary'>Waiting time</option>
+                                        <option class = 'Discharge'>Bill</option>
+                                        <option class = 'Discharge'>Delay in discharge</option>
+                                        <option class = 'Discharge'>Staff behaviour</option>
+                                        <option class = 'Doctors'>Care and concern</option>
+                                        <option class = 'Doctors'>Communication</option>
+                                        <option class = 'ED'>Care and concern</option>
+                                        <option class = 'ED'>Communication</option>
+                                        <option class = 'ED'>Delay in services</option>
+                                        <option class = 'Housekeeping'>Room cleanliness</option>
+                                        <option class = 'Housekeeping'>Staff behaviour</option>
+                                        <option class = 'Housekeeping'>Timely services</option>
+                                        <option class = 'Housekeeping'>Toilet cleanliness</option>
+                                        <option class = 'Insurance'>Delay in services</option>
+                                        <option class = 'Insurance'>Staff behaviour</option>
+                                        <option class = 'Lab'>Delay in reporting</option>
+                                        <option class = 'Nursing'>Appearance and grooming</option>
+                                        <option class = 'Nursing'>Care and concern</option>
+                                        <option class = 'Nursing'>Timely services</option>
+                                        <option class = 'Paramedical'>Nutrition and dietetics</option>
+                                        <option class = 'Paramedical'>Physiotherapy</option>
+                                        <option class = 'Paramedical'>Speech therapy and audiology</option>
+                                        <option class = 'Pharmacy'>Delay in services</option>
+                                        <option class = 'Pharmacy'>Medicine availability</option>
+                                        <option class = 'Pharmacy'>Staff behaviour</option>
+                                        <option class = 'Radiology'>Delay in reporting</option>
+                                        <option class = 'Radiology'>Investigation delay</option>
+                                        <option class = 'Radiology'>Staff behaviour</option>
+                                        <option class = 'Security'>Staff behaviour</option>
+                                        <option class = 'Others'>General</option>
+                                        <option class = 'Others'>Hospital Management</option>
+                                </select>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="Reassign_reason" class = 'bmh-orange-txt font-weight-bold'>Re-assign Comments</label>
@@ -343,9 +345,17 @@
                             <textarea rows = "5" type="text" class="form-control" id="comments" name="description1"></textarea>                      
                         </div>   
                         <h6 class = 'bmh-blue-txt'><em>Insta Replies (Beta)*</em></h6>
-                        <button id='smart-reply1' class = 'btn btn-outline-primary btn-block mb-2'>Action taken.</button>
-                        <button id='smart-reply2' class = 'btn btn-outline-primary btn-block mb-2'>Informed concerned staff.</button>
-                        <button id='smart-reply3' class = 'btn btn-outline-primary btn-block mb-2'>Marked as VOC.</button>
+                        <div class = 'row'>
+                            <div class = 'col-12 col-md-4'>
+                                <button id='smart-reply1' class = 'btn btn-outline-primary btn-block mb-2'>Action taken.</button>
+                            </div>
+                            <div class = 'col-12 col-md-4'>
+                                <button id='smart-reply2' class = 'btn btn-outline-primary btn-block mb-2'>Informed concerned staff.</button>
+                            </div>
+                            <div class = 'col-12 col-md-4'>
+                                <button id='smart-reply3' class = 'btn btn-outline-primary btn-block mb-2'>Marked as VOC.</button>
+                            </div>
+                        </div>
                         <hr>
                         <button type="submit" id='submit-close' class="btn bmh-blue-bg btn-block">Submit</button>
                     </div>                     
