--- a/feedback.html
+++ b/feedback.html
@@ -174,7 +174,7 @@
                     </div>                    
                 </div>                    
                     <div class="form-group" id = "nps">
-                            <p class='text-justify'>Based on your recent experience at BMH, how likely are you to recommend us to a relative or a friend?</p>
+                            <p class='text-justify bmh-blue-txt font-weight-bold'>Based on your recent experience at BMH, how likely are you to recommend us to a relative or a friend?</p>
                         <label class="nps-btn red poor"><input type="radio" name="rating" value = "1"><span>1</span></label>
                         <label class="nps-btn red poor"><input type="radio" name="rating" value = "2"><span>2</span></label>
                         <label class="nps-btn orange poor"><input type="radio" name="rating" value = "3"><span>3</span></label>
