--- a/dialler.html
+++ b/dialler.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#364cc9">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Feedback Dialler</title>
     <link rel="stylesheet" href="css/all.min.css">    
