--- a/close.html
+++ b/close.html
@@ -1,9 +1,9 @@
 <html>
  
 <head>
-    <title>Feedback Form</title>
+    <title>Feedback Analysis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#F35724">
+    <meta name="theme-color" content="#364cc9">
     <script src="jquery-3.4.1.min.js"></script>
     <script src="jquery-migrate-1.4.1.min.js"></script>    
     <script src="bootstrap.min.js"></script>
