--- a/close.html
+++ b/close.html
@@ -138,6 +138,27 @@
         color: #F35724 !important;
     }
 
+    .jumbotron {
+    padding-bottom: 0.25rem !important;
+    padding-top: 0.75rem !important;
+    margin-bottom: 1rem !important;
+    }
+
+    @media (min-width: 576px) {
+        .jumbotron {
+            padding-bottom: 1rem !important;
+        padding-top: 1.5rem !important;
+        margin-bottom: 1.5rem !important;
+        }
+    }
+
+    @media (min-width: 576px) {
+        .logo {
+        width: 200px !important;
+        }
+    }
+
+
 
     </style>
     <link rel="stylesheet" href="bootstrap.min.css">
@@ -147,8 +168,8 @@
     
         <div class="jumbotron jumbotron-fluid bmh-blue-bg">
                     <div class="container text-center">
-                        <img src="logo 200.png" class="img-fluid rounded" alt="Responsive image">
-                        <h1 class="display-5 text-white pt-3">Feedback Analysis</h1>
+                        <img src="logo 200.png" class="img-fluid rounded logo" alt="Responsive image"  width = '150px'>
+                        <h1 class="display-5 text-white pt-2">Feedback Analysis</h1>
                       <p class="text-white"><em>Powered by BMH Data Analytics Team</em></p>
                     </div>
         </div>
