--- a/feedback.html
+++ b/feedback.html
@@ -109,7 +109,7 @@
         background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
 }
 
-.rounded-heading {
+    .rounded-heading {
         border-radius: 5px 15px;
         background: #007bff;
         color: white;
@@ -127,6 +127,27 @@
         margin-top: 60px;
 
     }
+
+    .jumbotron {
+    padding-bottom: 0.25rem !important;
+    padding-top: 0.75rem !important;
+    margin-bottom: 1rem !important;
+    }
+
+    @media (min-width: 576px) {
+        .jumbotron {
+            padding-bottom: 1rem !important;
+        padding-top: 1.5rem !important;
+        margin-bottom: 1.5rem !important;
+        }
+    }
+
+    @media (min-width: 576px) {
+        .logo {
+        width: 200px !important;
+        }
+    }
+
     </style>
     <link rel="stylesheet" href="bootstrap.min.css">
 </head>
@@ -134,8 +155,8 @@
 <body>    
         <div class="jumbotron jumbotron-fluid bmh-blue-bg">
                 <div class="container text-center">
-                  <img src="logo 200.png" class="img-fluid rounded" alt="Responsive image">
-                  <h1 class="display-5 text-white pt-3">IP Feedback Form</h1>
+                  <img src="logo 200.png" class="img-fluid rounded logo" alt="Responsive image" width = '150px'>
+                  <h1 class="display-5 text-white pt-2">IP Feedback Form</h1>
                   <p class="text-white"><em>Powered by BMH Data Analytics Team</em></p>
                 </div>
         </div>
