scroll to bottom on clicking feedback score

--- a/feedback.html
+++ b/feedback.html
@@ -687,6 +687,7 @@
                 $("#notification").html("<p class='text-justify'><em>We are happy to know that you are delighted with your experience at BMH. \
                 Please share your experience with us by clicking on the <strong>'Add Feedback'</strong> button below.<em></p>");
                 $("#notification").fadeIn();
+                $('html, body').animate({scrollTop:$(document).height()}, 'slow');
             });
         });
 
@@ -695,6 +696,7 @@
                 $("#notification").html("<p class='text-justify'><em>We are happy to know that you are satisfied with your experience at BMH. \
                 Please let us know how we can provide a delightful experience by clicking on the <strong>'Add Feedback'</strong> button below.<em></p>");
                 $("#notification").fadeIn();
+                $('html, body').animate({scrollTop:$(document).height()}, 'slow');
             });
         });
 
