--- a/dialler.html
+++ b/dialler.html
@@ -128,7 +128,7 @@
         document.getElementById('call').href = "tel:"+phone;
         document.getElementById('sms').href = "sms:"+phone+"?body=Dear "+ patient + 
         ",%0a"+
-        "%0a"+"Hope you are recovering well after you recent stay at BMH. I would like to follow-up on a feedback you submitted at during your stay here. "+
+        "%0a"+"Hope you are recovering well after you recent stay at BMH. I would like to follow-up on a feedback you submitted during your stay here. "+
         "I tried reaching you over the phone, but was unable to do so. Kindly let me know a suitable time to contact you to discuss further."+
         "%0a"+
         "%0a"+assignee+
