send sms correction

--- a/feedback.html
+++ b/feedback.html
@@ -586,7 +586,7 @@
 
     </div>
  
-    <a href="#" class="float">
+    <a id ="sms" href="#" class="float">
         <i class="fas fa-envelope my-float"></i>
     </a>
 
