send link via whatsapp

--- a/feedback.html
+++ b/feedback.html
@@ -644,7 +644,7 @@
             var department = params.split('&')[6].replace(/%20/g, " ");
             var mobile = params.split('&')[7];
             var admNo = params.split('&')[8];
-            // var link = params.split('&')[9];
+            var link = params.split('&')[9];
             var link = window.location.href;
         //Pre-fill form based on patient data
             document.getElementById('submitter').value = submitter;
@@ -656,7 +656,18 @@
             document.getElementById('department').value = department;
             document.getElementById('mobile').value = mobile;
             document.getElementById('admNo').value = admNo;
-            document.getElementById('sms').href = "sms:"+mobile+"?body=Dear "+ name + 
+            // document.getElementById('sms').href = "sms:"+mobile+"?body=Dear "+ name + 
+            // ",%0a"+
+            // "%0a"+"Thank you for choosing Baby Memorial Hospital for your healthcare needs. "+
+            // "Please provide your valuable feedback based on your recent stay at BMH by clicking on the following link: "+
+            // link+
+            // "%0a"+
+            // "%0a"+submitter+
+            // ",%0a"+"Customer Relations Executive"+
+            // ",%0a"+"Baby Memorial Hospital.";
+
+            document.getElementById('sms').href = 'https://wa.me/?text=' +
+            "Dear "+ name + 
             ",%0a"+
             "%0a"+"Thank you for choosing Baby Memorial Hospital for your healthcare needs. "+
             "Please provide your valuable feedback based on your recent stay at BMH by clicking on the following link: "+
@@ -665,6 +676,9 @@
             "%0a"+submitter+
             ",%0a"+"Customer Relations Executive"+
             ",%0a"+"Baby Memorial Hospital.";
+
+            // 'https://wa.me/whatsappphonenumber/?text=urlencodedtext'
+            // 'https://wa.me/?text=urlencodedtext'
 
             console.log(admNo);
 
