--- a/feedback.html
+++ b/feedback.html
@@ -681,18 +681,7 @@
             document.getElementById('department').value = department;
             document.getElementById('mobile').value = mobile;
             document.getElementById('admNo').value = admNo;
-            // document.getElementById('sms').href = "sms:"+mobile+"?body=Dear "+ name + 
-            // ",%0a"+
-            // "%0a"+"Thank you for choosing Baby Memorial Hospital for your healthcare needs. "+
-            // "Please provide your valuable feedback based on your recent stay at BMH by clicking on the following link: "+
-            // link+
-            // "%0a"+
-            // "%0a"+submitter+
-            // ",%0a"+"Customer Relations Executive"+
-            // ",%0a"+"Baby Memorial Hospital.";
-
-            document.getElementById('sms').href = 'https://wa.me/?text=' +
-            "Dear "+ name + 
+            document.getElementById('sms').href = "sms:"+mobile+"?body=Dear "+ name + 
             ",%0a"+
             "%0a"+"Thank you for choosing Baby Memorial Hospital for your healthcare needs. "+
             "Please provide your valuable feedback based on your recent stay at BMH by clicking on the following link: "+
@@ -701,6 +690,17 @@
             "%0a"+submitter+
             ",%0a"+"Customer Relations Executive"+
             ",%0a"+"Baby Memorial Hospital.";
+
+            // document.getElementById('sms').href = 'https://wa.me/?text=' +
+            // "Dear "+ name + 
+            // ",%0a"+
+            // "%0a"+"Thank you for choosing Baby Memorial Hospital for your healthcare needs. "+
+            // "Please provide your valuable feedback based on your recent stay at BMH by clicking on the following link: "+
+            // link+
+            // "%0a"+
+            // "%0a"+submitter+
+            // ",%0a"+"Customer Relations Executive"+
+            // ",%0a"+"Baby Memorial Hospital.";
 
             // 'https://wa.me/whatsappphonenumber/?text=urlencodedtext'
             // 'https://wa.me/?text=urlencodedtext'
